# ansible-collection-mongodb

./: .gitignore  Makefile  README.md  galaxy.yml  pyproject.toml  requirements.yml  roles.yml
.github/workflows/: build.yml  hostfile.yml  install.yml  libvirt.yml  lint.yml  molecule.yml  offline.yml  online.yml  release.yml  restart.yml  start.yml  stop.yml  update.yml  upgrade.yml  version.yml
molecule/backup/: molecule.yml  verify.yml
molecule/common/: backup.yml  install.yml  offline.yml  online.yml  prepare.yml  restart.yml  start.yml  stop.yml  update.yml
molecule/common/templates/: vm.j2.xml
molecule/default/: molecule.yml  verify.yml
molecule/hostfile/: molecule.yml  side_effect.yml  verify.yml
molecule/hosts/: converge.yml  molecule.yml  side_effect.yml
molecule/install/: molecule.yml  verify.yml
molecule/ipaddr/: converge.yml  molecule.yml  side_effect.yml  verify.yml
molecule/offline/: molecule.yml  verify.yml
molecule/online/: molecule.yml
molecule/restart/: molecule.yml
molecule/start/: molecule.yml  prepare.yml
molecule/stop/: molecule.yml  prepare.yml  verify.yml
molecule/update/: molecule.yml
molecule/upgrade/: converge.yml  molecule.yml  side_effect.yml  verify.yml
playbooks/: backup.yml  config.yml  install.yml  mongos.yml  offline.yml  online.yml  prepare.yml  restart.yml  shard.yml  start.yml  stop.yml  update.yml  virtualenv.yml
playbooks/vars/: main.yml
