[tool.poetry]
name = "nephelaiio-mongodb"
version = "0.1.0"
description = ""
authors = ["Ted Cook <teodoro.cook@gmail.com>"]
readme = "README.md"
packages = [{include = "nephelaiio"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]
yamllint = "^1.32.0"
ansible = "^8.5.0"
molecule-docker = "^2.1.0"
molecule = "^6.0.2"
ansible-lint = { version = "^6.20.3", markers = "platform_system != 'Windows'" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
